--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "scripts": {
     "build": "gridsome build",
-    "develop": "gridsome develop",
+    "dev": "gridsome develop",
     "explore": "gridsome explore"
   },
   "dependencies": {
     "@sgrove/graphiql-explorer": "^0.8.0",
+    "@vue/runtime-dom": "^3.3.12",
     "axios": "^0.26.1",
     "graphiql": "^1.7.1",
     "gridsome": "^0.7.0",
